Fixed some layout issues that I noticed on the capstone project's homepage and added a hamburger button to display on phones instead of the nav menu. Will add styling for the open hamburger menu tomorrow.

--- a/Little Lemon Reserve-a-Table (Meta Front-End Developer Capstone)/little-lemon-reserve-a-table/src/Components/HomepageHero.css
+++ b/Little Lemon Reserve-a-Table (Meta Front-End Developer Capstone)/little-lemon-reserve-a-table/src/Components/HomepageHero.css
@@ -47,7 +47,16 @@
         width: 25em;
         height: 30em;
         padding: 1em calc(50% - 12.5em);
-        margin-bottom: 13em;
+        margin-bottom: 19em;
         justify-content: flex-start;
+    }
+
+    .Hero div {
+        padding-right: 0;
+    }
+
+    .Hero img {
+        width: 25em;
+        height: 29em;
     }
 }
