--- a/Little Lemon Reserve-a-Table (Meta Front-End Developer Capstone)/little-lemon-reserve-a-table/src/Components/NavBar.css
+++ b/Little Lemon Reserve-a-Table (Meta Front-End Developer Capstone)/little-lemon-reserve-a-table/src/Components/NavBar.css
@@ -12,6 +12,17 @@ nav {
     padding: 1em calc(50% - 25em);
 }
 
+.Icons button {
+    border: none;
+    color: var(--primary-green);
+    font-size: 2em;
+    display: none;
+}
+
+.Icons span {
+    padding-right: 1em;
+}
+
 nav menu {
     justify-content: center;
     padding: 0;
@@ -32,4 +43,31 @@ nav a:hover {
 
 nav a:active {
     color: var(--primary-yellow);
+}
+
+@media only screen and (max-width: 52em) {
+    nav {
+        width: 25em;
+        padding: 1em calc(50% - 12.5em);
+    }
+
+    nav menu {
+        display: none;
+    }
+
+    nav .Icons {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        margin: 0;
+        justify-content: space-between;
+        width: 25em;
+        padding: 0 calc(50% - 12.5em);
+    }
+
+    .Icons button {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+    }
 }
