--- a/Little Lemon Reserve-a-Table (Meta Front-End Developer Capstone)/little-lemon-reserve-a-table/src/Components/SpecialCard.css
+++ b/Little Lemon Reserve-a-Table (Meta Front-End Developer Capstone)/little-lemon-reserve-a-table/src/Components/SpecialCard.css
@@ -47,12 +47,12 @@
 
 @media only screen and (max-width: 52em) {
     .Special {
-        width: 31em;
+        width: 25em;
     }
 
     .Special img {
-        width: 31em;
-        height: 20em;
+        width: 25em;
+        height: 17em;
     }
 
     .Special p {
