--- a/Little Lemon Reserve-a-Table (Meta Front-End Developer Capstone)/little-lemon-reserve-a-table/src/Components/Testimonials.css
+++ b/Little Lemon Reserve-a-Table (Meta Front-End Developer Capstone)/little-lemon-reserve-a-table/src/Components/Testimonials.css
@@ -37,7 +37,7 @@
 
     .Testimonials .Review {
         grid-row: auto;
-        width: 12em;
+        width: 10em;
     }
 
     .Review:nth-child(even) {
